# parsimony

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PLAN-dependency-wiring.md  PLAN-error-hierarchy-credentials.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.council/review-output/2026-04-13-1518/: FINAL-REVIEW.md  beck.md  collina.md  context-brief.md  dodds.md  fowler.md  friedman.md  hunt.md  leach.md  performance.md  saarinen.md  willison.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_connector.yml
.github/workflows/: deploy-docs.yml  publish.yml  release.yml  test.yml
docs/: CHANGES_FOR_MERGE.md  CNAME  LAUNCH-READINESS.md  api-reference.md  architecture.md  building-a-private-connector.md  catalog-partitioning-design.md  connector-guide.md  connector-implementation-guide.md  contract.md  cookbook.md  deployment.md  extracting-a-bundled-connector.md  faq.md  guide-new-plugin.md  guide.md  index.md  internal-connectors.md  mcp-setup.md  plugin-contract.md  quickstart.md  refactor-plan.md  sec-edgar-connectors.md  user-guide.md
docs/stylesheets/: terminal.css
examples/: __init__.py  catalog_workflow.py  custom_connector.py  end_to_end_demo.py  fmp_screening.py  multi_source.py  quickstart_fred.py  quickstart_sdmx.py
ockham/: __init__.py  connector.py  data_store.py  result.py
ockham/catalog/: __init__.py  builder.py  catalog.py  embeddings.py  identity_from_params.py  models.py  series_pipeline.py  store.py
ockham/connectors/: __init__.py  bde.py  bdf.py  bdp.py  bls.py  boc.py  boe.py  boj.py  destatis.py  eia.py  eodhd.py  financial_reports.py  fmp.py  fmp_screener.py  fred.py  polymarket.py  rba.py  riksbank.py  sdmx.py  sec_edgar.py  snb.py  treasury.py
ockham/embeddings/: __init__.py  litellm.py
ockham/mcp/: __init__.py  __main__.py  bridge.py  server.py
ockham/stores/: __init__.py  catalog_store.py  memory.py  memory_data.py  sqlite.py  sqlite_catalog.py
ockham/transport/: __init__.py  http.py  json_helpers.py
parsimony/: __init__.py  cache.py  catalog.py  cli.py  connector.py  discover.py  discovery.py  embedder.py  errors.py  http.py  indexes.py  publish.py  result.py  stores.py  testing.py  transport.py
parsimony/_standard/: catalog.py  embedder.py  meta.py
parsimony/_standard/sources/: __init__.py  hf.py  local.py  s3.py
parsimony/bundles/: __init__.py  build.py  discovery.py  errors.py  eval.py  format.py  lazy_catalog.py  safety.py  spec.py  targets.py
parsimony/catalog/: __init__.py  arrow_adapters.py  builder.py  catalog.py  embedder_info.py  identity_from_params.py  models.py  namespaces.py
parsimony/cli/: __init__.py  __main__.py  bundles.py  conformance.py  list_plugins.py
parsimony/cli/bundles/: __init__.py  _shared.py  build_cmd.py  eval_cmd.py  fanout.py  list_cmd.py  plan_cmd.py  publish_cmd.py  selection.py
parsimony/connectors/: __init__.py  alpha_vantage.py  bde.py  bdf.py  bdp.py  bls.py  boc.py  boe.py  boj.py  catalog_search.py  coingecko.py  destatis.py  eia.py  eodhd.py  financial_reports.py  finnhub.py  fmp.py  fmp_screener.py  fred.py  polymarket.py  rba.py  riksbank.py  sdmx.py  sec_edgar.py  snb.py  tiingo.py  treasury.py
parsimony/discovery/: __init__.py  _compose.py  _scan.py  errors.py
parsimony/embeddings/: __init__.py  litellm.py  sentence_transformers.py
parsimony/mcp/: __init__.py  __main__.py  server.py
parsimony/plugins/: __init__.py  discovery.py  errors.py
parsimony/stores/: __init__.py  catalog_store.py  data_store.py  memory_data.py  sqlite_catalog.py
parsimony/stores/hf_bundle/: __init__.py  builder.py  cache_layout.py  errors.py  format.py  hf_download.py  integrity.py  store.py
parsimony/testing/: __init__.py  conformance.py
parsimony/transport/: __init__.py  http.py  json_helpers.py
tests/: bundles_helpers.py  conftest.py  hf_bundle_helpers.py  test_build_connectors_integration.py  test_bundles_arrow.py  test_bundles_build_helpers.py  test_bundles_discovery.py  test_bundles_eval.py  test_bundles_format.py  test_bundles_retrieval_eval.py  test_bundles_safety.py  test_bundles_spec.py  test_bundles_store.py  test_bundles_targets_hf.py  test_bundles_token_hygiene.py  test_cache.py  test_catalog_bulk_ingest.py  test_catalog_cache.py  test_catalog_coverage.py  test_catalog_namespaces.py  test_catalog_rewrite_invariants.py  test_catalog_search_contract.py  test_catalog_search_mcp.py  test_catalog_url.py  test_cli.py  test_cli_bundles.py  test_cli_cache.py  test_cli_conformance.py  test_cli_list_plugins.py  test_client_init.py  test_connector.py  test_connector_describe.py  test_connectors_integration.py  test_connectors_verbs.py  test_data_store.py  test_description_role.py  test_discover.py  test_discovery.py  test_eodhd_connectors.py  test_errors.py  (+37 more)
tests/fixtures/: __init__.py  synth_provider.py
tests/test_mcp/: conftest.py  test_bridge.py  test_server.py
