[project]
name = "parsimony-core"
version = "0.1.0a1"
description = "Connector framework for financial data — search, fetch, and catalog series from FRED, SDMX, FMP, SEC Edgar, and more"
authors = [{ name = "Ockham.sh", email = "team@ockham.sh" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["finance", "data", "connectors", "fred", "sdmx", "catalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Mandatory kernel footprint — the freeze (DESIGN-distribution-model.md §5)
    # restricts this list to: validation, data carriers, async HTTP, cache
    # directory resolution. Heavy catalog deps live under [catalog].
    "pydantic>=2.11.1,<3",
    "pandas>=2.3.0,<3",
    "pyarrow>=23.0.1",
    "httpx>=0.28.1",
    "platformdirs>=4.0.0,<5",
    "tenacity>=9.0.0,<10",
]

[project.optional-dependencies]
# HF Parquet + FAISS catalog bundle runtime — moved out of mandatory deps so
# `pip install parsimony-core` stays small. All callsites import these
# lazily, so absence does not break kernel import.
catalog = [
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "huggingface_hub>=0.25.0",
]
# Legacy SQLite-vec + hosted embedding API path. Retained as an extra for
# users who want local SQLite-based indexing instead of HF bundles.
search = ["litellm>=1.59.0,<2", "sqlite-vec>=0.1.6"]
# MCP server lives in the separate parsimony-mcp distribution.
all = ["parsimony-core[catalog,search]"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.10",
    "mypy>=1.10",
    "types-requests>=2.31",
    "pip-audit>=2.7",
    # Dev pulls in the catalog extra so the full test suite exercises the HF
    # bundle + FAISS + sentence-transformers code paths.
    "parsimony-core[catalog]",
]
docs = ["mkdocs-material"]

[project.urls]
Homepage = "https://parsimony.dev"
Repository = "https://github.com/ockham-sh/parsimony"
Documentation = "https://docs.parsimony.dev"

[project.scripts]
parsimony = "parsimony.cli:main"

# No in-tree connectors. Every connector is published as its own
# parsimony-<name> distribution from the parsimony-connectors monorepo and
# discovered via the `parsimony.providers` entry-point group. See
# `docs/contract.md` for the plugin contract.

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "financial_reports_generated_client.*"
follow_imports = "skip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parsimony"]

[tool.hatch.build.targets.sdist]
include = ["parsimony", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=parsimony --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: hits live APIs (may be slow, requires env vars)",
]

[tool.coverage.run]
omit = [
    "parsimony/embeddings/__init__.py",
    # Requires a real HuggingFace-hosted model (torch + sentence-transformers)
    # to exercise; tests use FakeEmbeddingProvider (tests/hf_bundle_helpers.py).
    # Loading logic is covered by the live publish pipeline, not unit tests.
    "parsimony/embeddings/sentence_transformers.py",
    # Litellm path is an optional extra — integration-tested elsewhere.
    "parsimony/embeddings/litellm.py",
]
