[project]
name = "parsimony-core"
version = "0.3.0"
description = "Connector framework for financial data — typed fetch, hybrid-search catalogs, distribute via Hugging Face Hub or S3."
authors = [{ name = "Ockham.sh", email = "team@ockham.sh" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["finance", "data", "connectors", "fred", "sdmx", "catalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Mandatory kernel footprint — validation, data carriers, async HTTP,
    # cache directory resolution. Heavy catalog deps live under [standard].
    "pydantic>=2.11.1,<3",
    "pandas>=2.3.0,<3",
    "pyarrow>=23.0.1",
    "httpx>=0.28.1",
    "platformdirs>=4.0.0,<5",
    "tenacity>=9.0.0,<10",
    # TOON encoder used by `parsimony.client` to emit a fetch summary to
    # stderr, and by downstream agent contexts (parsimony-mcp bridge,
    # parsimony-agents fetch_log) for token-efficient tabular previews.
    "toon-format>=0.9.0b1,<0.10",
    # `parsimony.load_dotenv()` applies a project-local .env so the agent's
    # `python -c "..."` subprocess inherits API keys without `--env-file`.
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
# Canonical Catalog runtime: Parquet rows + FAISS vectors + BM25 keywords
# with the sentence-transformers default embedder, plus the hf:// loader.
# Stays optional so `pip install parsimony-core` never pulls torch.
standard = [
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0.0",
    "huggingface_hub>=0.25.0",
]
# Hosted-API embedder via the litellm unified API (OpenAI, Gemini, Cohere,
# Voyage, Bedrock).
litellm = ["litellm>=1.59.0,<2"]
# s3:// catalog URL support (read/write). Source handler is still a stub —
# adding this extra does not yet enable the scheme.
s3 = ["s3fs>=2024.0"]
all = ["parsimony-core[standard,litellm,s3]"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.10",
    "mypy>=1.10",
    "types-requests>=2.31",
    "pip-audit>=2.7",
    # Dev pulls in the standard extra so the full test suite exercises the
    # FAISS + BM25 + sentence-transformers paths.
    "parsimony-core[standard,litellm]",
]
docs = ["mkdocs-material"]

[project.urls]
Homepage = "https://parsimony.dev"
Repository = "https://github.com/ockham-sh/parsimony"
Documentation = "https://docs.parsimony.dev"

[project.scripts]
parsimony = "parsimony.cli:main"

# No in-tree connectors. Every connector is published as its own
# parsimony-<name> distribution from the parsimony-connectors monorepo and
# discovered via the `parsimony.providers` entry-point group. See
# `docs/contract.md` for the plugin contract.

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "financial_reports_generated_client.*"
follow_imports = "skip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parsimony"]

[tool.hatch.build.targets.sdist]
include = ["parsimony", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=parsimony --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: hits live APIs (may be slow, requires env vars)",
]

[tool.coverage.run]
omit = [
    # Requires sentence-transformers / litellm network I/O; unit tests use
    # fake embedders. Loading logic is covered by integration / live tests.
    "parsimony/embedder.py",
    # FAISS helpers are pure wrappers around a native library; exercised by
    # the Catalog save/load integration tests, not unit tests.
    "parsimony/indexes.py",
    # Catalog + publish touch FAISS + HF Hub — covered by integration tests.
    "parsimony/catalog.py",
    "parsimony/publish.py",
]
